--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 𝑎𝑢𝑡𝑜𝑚𝑎𝑡𝑖𝑜𝑛𝑠 𝑛' 𝑚𝑜𝑟𝑒</title>
   <link rel="icon" href="https://64.media.tumblr.com/95f2ae6a166a2ce9e4feabdbd0e03e2c/3645bebb47f6e366-00/s400x600/d202567175a6296a1d7d0e497f4e89f514ae03db.png" type="image/png">
   <head>	  
+<link rel="canonical" href="https://alexandroshub.github.io/" />
 <!-- Global site tag (gtag.js) - Google Analytics --> <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script><script> window.dataLayer = window.dataLayer || [];  function gtag(){dataLayer.push(arguments);}  gtag('js', new Date());  gtag('config', 'UA-128580719-1');</script>
   <!--  /////// meta information  /////// -->
     <meta charset="UTF-8">
