--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 <!DOCTYPE html>
 <html lang="el">
   <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 𝑎𝑢𝑡𝑜𝑚𝑎𝑡𝑖𝑜𝑛𝑠 𝑛' 𝑚𝑜𝑟𝑒 : The Digital Future</title>
-  <link rel="icon" href="https://64.media.tumblr.com/9d0bca2b6db4548154c83edf146e13c1/44cd2a580847b444-c2/s1280x1920/4197efbdc2c175bc4d05b5d36aa2d3614d015f8f.png" type="image/png">
-	<!-- https://64.media.tumblr.com/e6e97f26b1f202c48ecae78be696ced5/afc46cbefaec4590-c9/s1280x1920/cc60083b81dc89aeb2d990d5ccbfef7985edee8c.png -->
+  <link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
   <head>	  
 <link rel="canonical" href="https://alexandroshub.github.io/index.html" />
 <!-- Global site tag (gtag.js) - Google Analytics --> <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script><script> window.dataLayer = window.dataLayer || [];  function gtag(){dataLayer.push(arguments);}  gtag('js', new Date());  gtag('config', 'UA-128580719-1');</script>
