--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <head>	  
 <link rel="canonical" href="https://alexandroshub.github.io/index.html" />
 <!-- Global site tag (gtag.js) - Google Analytics --> <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script><script> window.dataLayer = window.dataLayer || [];  function gtag(){dataLayer.push(arguments);}  gtag('js', new Date());  gtag('config', 'UA-128580719-1');</script>
-  <!--  /////// meta information  /////// -->
+     	  <meta http-equiv="Refresh" content="6;url=https://alexandroshub.github.io/26index.html">
+
+<!--  /////// meta information  /////// -->
     <meta charset="UTF-8">
     <meta name="author" content="Alexandros Papaspyrou">
     <meta name="description" content="Personal website of Papaspyrou Alexandros. All about IoT projects with arduino or raspberryPi, Automations, Robotics and more. Explore cutting-edge technology, automation, IoT, and development with our innovative solutions. Experience the digital future today.">
