--- a/automation.html
+++ b/automation.html
@@ -1,5 +1,4 @@
-
-<!-- SpecialPage Automation V. 24.10.20
+<!-- SpecialPage Automation V.10/8/25
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -10,8 +9,8 @@ Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
 -->
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou | Automation</title>
-<link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
+<title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 𝑎𝑢𝑡𝑜𝑚𝑎𝑡𝑖𝑜𝑛𝑠 𝑛' 𝑚𝑜𝑟𝑒 : The Digital Future</title>
+  <link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -32,9 +31,7 @@ body, html {
     background-image: url("https://images.squarespace-cdn.com/content/v1/5cf841395ee05200018ca96c/1582912438838-6HYI8TTYNOXNPPQGQKVO/ke17ZwdGBToddI8pDm48kAD-r7j4YN7tv4midO0oeTl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0prfa1Z6IeUrCPboCAmmHZmqcVosbeIW7EPiNy517darchQ3_FWKtlkzmpwe5AHLOA/shutterstock_1421446100.jpg?format=1500w");
     min-height: 40%;
 }
-.menu {
-    display: none;
-}
+
 </style>
 
 <body>
@@ -57,36 +54,162 @@ body, html {
   logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα.">
 </div>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->      
-<!-- //////////////////////////Top menu////////////////////////// -->
-<style>
-.topnav {overflow: hidden; background-color:rgb(0, 0, 0);}
-.topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
-.topnav a:hover {color: white;}
-.topnav a.active {color: #D4EDDE;}
-.topnav .icon {display: none;}
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {float: right; display: block;}}
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {position: absolute; right: 0; top: 0;}
-  .topnav.responsive a {float: none; display: block; text-align: left;}}
-</style>
-<div class="topnav" id="myTopnav">
 
-  <a href="https://alexandroshub.github.io" class="active"  id="home"><img src= "https://64.media.tumblr.com/5bda3cb7ce87ed9de69c85af725ebe78/f06bf6e1e4ca1249-32/s500x750/68ec78a36cb70324f7aa6a0d7657b46926fc44b2.png" style="width:28px;"></a>
-  <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
-  <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
-  <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
-  <a href="https://alexandroshub.github.io/contact.html"><i class="far fa-comment"></i>  &nbsp;Contact</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
-<script>
-function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
-</script>
-<!-- //////////////////////////END of Top menu////////////////////////// -->
+<!-- //////////////////////////Top menu////////////////////////// -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Bootstrap & Fonts -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<style>
+body {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* Navbar styling */
+.navbar {
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 0;
+    background: rgba(30, 30, 40, 0.9);
+    backdrop-filter: blur(6px);
+    border: none;
+    font-size: 14px !important;
+    letter-spacing: 1px;
+    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.4);
+    min-height: 55px;
+}
+
+/* Logo styling - vertically centered */
+.navbar .navbar-header .logo {
+    display: inline-block;
+    line-height: 55px;
+    vertical-align: middle;
+    padding: 0 10px;
+    font-family: 'Audiowide';
+    font-size: 24px;
+    color: white;
+    text-decoration: none;
+}
+
+/* Menu links */
+.navbar li a {
+    color: #e0e0e0 !important;
+    padding: 18px 20px; /* matches navbar height */
+    transition: all 0.3s ease;
+    height: 55px;
+    display: flex;
+    align-items: center;
+}
+
+.navbar li a:hover {
+    color: white !important;
+    background: linear-gradient(90deg, rgba(239,140,53,0.8), rgba(218,39,73,0.8), rgba(189,24,133,0.8));
+    border-radius: 0;
+}
+
+/* Toggle button for mobile */
+.navbar-toggle {
+    background-color: rgba(255, 255, 255, 0.2);
+    border: none;
+    margin-top: 10px;
+}
+
+.navbar-toggle .icon-bar {
+    background-color: white;
+}
+
+/* Dropdown menu */
+.dropdown-menu {
+    background-color: rgba(40, 40, 50, 0.98) !important;
+    border: none;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-top: 0;
+}
+
+.dropdown-menu li a {
+    color: #ddd !important;
+    padding: 10px 16px;
+}
+
+.dropdown-menu li a:hover {
+    background: rgba(239,140,53,0.3) !important;
+    color: white !important;
+}
+
+/* Remove Bootstrap default white background when opening */
+.navbar-nav > li.open > a,
+.navbar-nav > li.open > a:focus,
+.navbar-nav > li.open > a:hover {
+    background: rgba(239,140,53,0.3) !important;
+    color: white !important;
+}
+
+@media (max-width: 768px) {
+    .navbar li a {
+        padding: 12px 15px;
+        font-size: 16px;
+        height: auto;
+    }
+}
+</style>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" aria-label="Εναλλαγή πλοήγησης">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a href="https://alexandroshub.github.io" class="logo">&nbsp; AlphaPi</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">About</a></li>
+        <li><a href="#portf">Projects</a></li>      
+        <li><a href="#plus">Plus</a></li>     
+        <li><a href="https://alexandroshub.github.io/ap.contact">Contact</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="https://alexandroshub.github.io/cv">My CV</a></li>
+            <li><a href="https://alexandroshub.github.io/porto.ap.html">PORTFOLIO</a></li>
+            <li><a href="https://alexandroshub.github.io/plus.ap.html">PLUS +</a></li>
+            <li class="divider"></li>
+            <li class="dropdown-header">Automations</li>
+            <li><a href="https://alexandroshub.github.io/iot.html">IoT</a></li>
+            <li><a href="https://alexandroshub.github.io/ai.html">AI</a></li>
+            <li><a href="https://alexandroshub.github.io/ardu22.html">Arduino</a></li>
+            <li><a href="https://alexandroshub.github.io/raspberrypi">Raspberrypi</a></li>
+            <li><a href="https://alexandroshub.github.io/stem">STEAM</a></li>
+            <li class="divider"></li>
+            <li class="dropdown-header">Creative Side</li>
+            <li><a href="https://alexandroshub.github.io/art.html">ART gelery</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<!-- //////////////////////////Top menu////////////////////////// -->
+          
+<!--==========================================================================
+
+  ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+  ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+  ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+==========================================================================   -->         
 
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
@@ -100,7 +223,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
  <br><br><br><br><br><br><br>
   <style>
 #whitegrady {
-  height: 50px; background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(255,255,255,1));
+  height: 100px; background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(255,255,255,1));
 }</style>
 <div id="whitegrady"></div>
  
