--- a/26index.html
+++ b/26index.html
@@ -657,19 +657,6 @@ Let's explore the exciting possibilities of these cutting-edge technologies toge
 
 -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 <style>
 #mySidenav a {
@@ -922,7 +909,7 @@ function topFunction() {
 <p style="text-align:center;">
 εδώ θα βρεις ιδέες και λύσεις που αλλάζουν τα δεδομένα <br>και αναβαθμίζουν καθημερινά τη ζωή</p>
 
-<section style="max-width:900px;margin:3rem auto;padding:0 1.5rem;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:#20435c; background:#f0f8fa; border-radius:8px; box-shadow:0 4px 12px rgba(46,148,185,0.25);"><br> <header style="background:linear-gradient(135deg, #2d7a69, #2e94b9); color:#ffffff; padding:2.7rem 1rem 2rem 1rem; text-align:center; border-radius:8px 8px 0 0; box-shadow:0 4px 14px rgba(46,148,185,0.35);"> <h1 style="font-size:2.4rem; margin:0 0 0.4rem 0;">Από την Ιδέα στην Αυτόματη Υλοποίηση 🚀</h1> <p style="font-size:1.15rem; font-weight:600; margin:0 auto; max-width:650px; line-height:1.4;"> Καλωσόρισες στο <strong>AlexandrosHub</strong> – το <b>κέντρο καινοτομίας</b> για σύγχρονες λύσεις <em>Automation Control Systems</em>, <em>IoT</em>, <em>Ρομποτικής</em> &amp; έξυπνων τεχνολογικών projects! </p> </header> <main style="padding:2rem 1rem; max-width:750px; margin:0 auto; line-height:1.6; font-size:1.05rem; text-align:justify;"> <p> Εδώ η <strong>τεχνολογία συναντά τη δημιουργικότητα:</strong> θα βρεις πρακτικές λύσεις για αυτοματισμούς (<a href="https://alexandroshub.github.io/automation" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fas fa-cog"></i> Automation</a>), <a href="https://alexandroshub.github.io/soon" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fas fa-robot"></i> Ρομποτική</a>, <a href="https://alexandroshub.github.io/iot" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fas fa-network-wired"></i> IoT</a>, αλλά και projects με <a href="https://alexandroshub.github.io/arduino" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fas fa-infinity"></i> Arduino</a>, <a href="https://alexandroshub.github.io/raspberrypi" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fab fa-raspberry-pi"></i> RaspberryPi</a>, <a href="https://alexandroshub.github.io/codingzone" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fas fa-code"></i> Προγραμματισμό</a> και <a href='https://alexandroshub.github.io/stem' style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fa fa-external-link"></i> STEM</a>. </p> <p> Ανακάλυψε <b>οδηγούς, tutorials, διασκεδαστικό & ενημερωτικό περιεχόμενο</b> στον χώρο της τεχνολογίας – και πολλούς ακόμη θησαυρούς στο <a href="https://alexandroshub.github.io/plus.ap.html" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fa fa-external-link"></i> plus & blog</a>. </p> 
+<section style="max-width:900px;margin:3rem auto;padding:0 1.5rem;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:#20435c; background:#f0f8fa; border-radius:8px; box-shadow:0 4px 12px rgba(46,148,185,0.25);"><br> <header style="background:linear-gradient(135deg, #2d7a69, #2e94b9); color:#ffffff; padding:2.7rem 1rem 2rem 1rem; text-align:center; border-radius:8px 8px 0 0; box-shadow:0 4px 14px rgba(46,148,185,0.35);"> <h1 style="font-size:2.4rem; margin:0 0 0.4rem 0;">Από την Ιδέα στην Αυτόματη Υλοποίηση 🚀</h1> <p style="font-size:1.15rem; font-weight:600; margin:0 auto; max-width:650px; line-height:1.4;"> Καλωσόρισες στο <strong>AlexandrosHub</strong> – το <b>κέντρο καινοτομίας</b> για σύγχρονες λύσεις <em>Automation Control Systems</em>, <em>IoT</em>, <em>Ρομποτικής</em> &amp; έξυπνων τεχνολογικών projects! </p> </header> <main style="padding:2rem 1rem; max-width:750px; margin:0 auto; line-height:1.6; font-size:1.05rem; text-align:justify;"> <p> Εδώ η <strong>τεχνολογία συναντά τη δημιουργικότητα:</strong> θα βρεις πρακτικές λύσεις για <a href="https://alexandroshub.github.io/automation" style="color:#2e94b9; text-decoration:none; font-weight:700;"> Automations</a>, <a href="https://alexandroshub.github.io/soon" style="color:#2e94b9; text-decoration:none; font-weight:700;"> Ρομποτική</a>, <a href="https://alexandroshub.github.io/iot" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fas fa-network-wired"></i> IoT</a>, αλλά και projects με <a href="https://alexandroshub.github.io/arduino" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fas fa-infinity"></i> Arduino</a>, <a href="https://alexandroshub.github.io/raspberrypi" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fab fa-raspberry-pi"></i> RaspberryPi</a>, <a href="https://alexandroshub.github.io/codingzone" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fas fa-code"></i> Προγραμματισμό</a> και <a href='https://alexandroshub.github.io/stem' style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fa fa-external-link"></i> STEM</a>. </p> <p> Ανακάλυψε <b>οδηγούς, tutorials, διασκεδαστικό & ενημερωτικό περιεχόμενο</b> στον χώρο της τεχνολογίας – και πολλούς ακόμη θησαυρούς στο <a href="https://alexandroshub.github.io/plus.ap.html" style="color:#2e94b9; text-decoration:none; font-weight:700;"><i class="fa fa-external-link"></i> plus & blog</a>. </p> 
 
 <style>  div.kripsto { padding: 10px;}  @media screen and (max-width: 600px) { div.kripsto { display: none; }} </style>
 <div class="kripsto">
