--- a/stem.html
+++ b/stem.html
@@ -18,6 +18,9 @@
 <html>
 	 <title>𝙰𝚕𝚎𝚡𝚊𝚗𝚍𝚛𝚘𝚜𝙷𝚞𝚋 STEAM 🚀</title>
   <!--/2022/--><link rel="icon" href="https://64.media.tumblr.com/95f2ae6a166a2ce9e4feabdbd0e03e2c/3645bebb47f6e366-00/s400x600/d202567175a6296a1d7d0e497f4e89f514ae03db.png" type="image/png">
+
+	     	  <meta http-equiv="Refresh" content="6;url=https://alexandroshub.github.io/steam">
+
   <style>/* style information */
     body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     body, html {height: 100%; line-height: 1.8;}
