--- a/porto.ap.html
+++ b/porto.ap.html
@@ -24,6 +24,7 @@
   <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 𝑃𝑜𝑟𝑡𝑓𝑜𝑙𝑖𝑜</title>
   <link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
   <head>
+     	  <meta http-equiv="Refresh" content="3;url=https://alexandroshub.github.io/projects.html">
 
 <meta charset="UTF-8" />
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato&amp;subset=latin,latin-ext'>
