--- a/projects.html
+++ b/projects.html
@@ -253,12 +253,101 @@ ul.breadcrumb li a:hover {
 
 
 
+	
+
+
+
+
+
+<style>
+.promo-card {
+  position: relative;
+  background-image: url("https://64.media.tumblr.com/bd963b78222fdc43c2f4b69c72be0a6b/tumblr_pbnm7pHetV1si59zfo3_540.jpg");
+  background-size: cover;
+  background-position: center;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+  max-width: 800px;
+  margin: 2em auto;
+  overflow: hidden;
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
+}
+
+.promo-card .overlay {
+  background: rgba(0, 0, 0, 0.6);
+  padding: 2em;
+}
+
+.promo-card .title {
+  font-size: 1.8em;
+  font-weight: 700;
+  margin-bottom: 0.3em;
+  text-transform: uppercase;
+}
+
+.promo-card .genre {
+  font-size: 0.9em;
+  color: #38bdf8;
+  margin-bottom: 1em;
+}
+
+.promo-card .desc {
+  font-size: 1em;
+  font-weight: 300;
+  margin-bottom: 1.5em;
+}
+
+.promo-card .btn {
+  display: inline-block;
+  padding: 0.6em 1.4em;
+  background-color: #3b82f6;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-weight: 600;
+  text-decoration: none;
+  transition: background 0.3s ease;
+}
+
+.promo-card .btn:hover {
+  background-color: #2563eb;
+}
+
+.promo-card .badge {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  background: #f97316;
+  color: #fff;
+  font-size: 0.75em;
+  font-weight: 700;
+  padding: 0.3em 0.8em;
+  border-radius: 20px;
+  text-transform: uppercase;
+}
+</style>
+
+
+
+  <section class="projects" id="Arduino">
+  <div class="promo-card">
+  <div class="badge">Coming Soon</div>
+  <div class="overlay">
+    <h2 class="title" style="color: white;">Arduino: The Awakening</h2>
+    <div class="genre">Sci-Fi • IoT • Smart Living</div>
+    <p class="desc">In a world where machines think for themselves, one engineer unlocks the power of automation to change the future. Dive into a thrilling journey through smart homes, sentient devices, and the ethics of artificial intelligence.</p>
+    <a href="#" class="btn">Learn More</a>
+  </div>
+</div>
+  </section>
 
 
 
 
 
 
+	
 
 
 
