--- a/projects.html
+++ b/projects.html
@@ -433,6 +433,37 @@ ul.breadcrumb li a:hover {
 
 
   <section class="projects" id="tech">
+  <style>
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&family=Tilt+Neon&display=swap");
+
+.description h1 {
+  font-family: "Tilt Neon", sans-serif;
+  font-size: clamp(3rem, 5vw, 4rem);
+  line-height: 1.1;
+  margin-bottom: 30px;
+}
+
+.gradient-text {
+  font-family: "Tilt Neon", sans-serif;
+  background-image: linear-gradient(
+    90deg,
+    rgb(118, 167, 63) 0%,
+    rgb(51, 143, 118) 40%,
+    rgb(55, 141, 167) 50%,
+    rgb(117, 152, 242) 70%,
+    rgb(144, 118, 236) 100%
+  );
+  color: transparent;
+  background-size: contain;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+</style>
+
+<div class="description"><h1 class="title">
+<span class="gradient-text">from idea to automation</span> and beyond
+</h1>
     <h2>🚀 Featured Projects</h2>
     <div class="project-grid">
       
