--- a/ap.contact.html
+++ b/ap.contact.html
@@ -22,6 +22,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
  <title>𝙰𝚕𝚎𝚡𝚊𝚗𝚍𝚛𝚘𝚜𝙷𝚞𝚋 𝗰𝗼𝗻𝘁𝗮𝗰𝘁</title>
   <!--/2022/--><link rel="icon" href="https://64.media.tumblr.com/95f2ae6a166a2ce9e4feabdbd0e03e2c/3645bebb47f6e366-00/s400x600/d202567175a6296a1d7d0e497f4e89f514ae03db.png" type="image/png">
+ 
+       	  <meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/connect.html">
+
+  
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=Roboto:wght@400;500&display=swap');
 
