--- a/cv.html
+++ b/cv.html
@@ -25,6 +25,7 @@
  <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 CV </title>
 <!--/2022/--><link rel="icon" href="https://64.media.tumblr.com/95f2ae6a166a2ce9e4feabdbd0e03e2c/3645bebb47f6e366-00/s400x600/d202567175a6296a1d7d0e497f4e89f514ae03db.png" type="image/png">
  <meta charset="UTF-8" />
+       	  <meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/expi.html">
 
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato&amp;subset=latin,latin-ext'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
