--- a/apTOU.html
+++ b/apTOU.html
@@ -1,36 +1,27 @@
-
-
-<!--
-  ==========================================================================
+<!-- ==========================================================================
   
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
   ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
   
-    Alien v2
-    Updated: SpecialPage 'Privacy Statement & Terms of Use' Dec 07 2020
+    Updated: SpecialPage 'Privacy Statement & Terms of Use' // 25.8.25
     Website: https://alexandroshub.github.io
     Contact: 	a-papaspyrou@outlook.com.gr
     CC-BY international 4 2011-2020 Alexandros Papaspyrou
     
-    
    Welcome in my personal website 100% HTML Hosted by Github
    Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou 
-  
-  ==========================================================================
-  -->
+  ==========================================================================  -->
 <!DOCTYPE html>
 <html>
-  <title>Papaspyrou | About | Privacy Statement & Terms of Use</title>
-  <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
-  <meta charset="UTF-8">
+ <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 Terms of Use </title>
+  <link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
+ 
+  <meta charset="UTF-8">  
   
-  
-  <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-
+<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
-  
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css'>
   
 <style>
 h1 {
