--- a/26index.html
+++ b/26index.html
@@ -1,8 +1,3 @@
-
-
-
-
-
 <!--==========================================================================
 
 	  ▞▚ ▙▄ ▛ █▬█ ▞▚ ▛ █  ғʀᴏᴍ ɪᴅᴇᴀ ᴛᴏ ᴀᴜᴛᴏᴍᴀᴛɪᴏɴ ᴀɴᴅ ʙᴇʏᴏɴᴅ
@@ -615,28 +610,52 @@ body {
 
 
 
+    <div style="display:flex; flex-wrap: wrap; justify-content:center; gap: 16px; margin: 2rem 0;">
+<a href="https://alexandroshub.github.io/ap.contact.html" style="display:inline-block;font-size:1rem;font-weight:700;background: linear-gradient(135deg, #ef8c35, #da2749, #bd1885);color:#fff;padding:14px 24px;border-radius:12px;text-decoration:none;box-shadow: 0 4px 12px rgba(218,39,73,0.3); transition: transform 0.3s ease, box-shadow 0.3s ease;"onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 6px 16px rgba(218,39,73,0.4)'"onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 12px rgba(218,39,73,0.3)'" > 🚀 Δες τα Έργα μου </a>
 
+  <a href="https://alexandroshub.github.io/ap.contact.html"
+     style="
+       display: inline-block;
+       font-size: 1.5rem;
+       font-weight: 700;
+       background: linear-gradient(135deg, #2e94b9, #2d7a69);
+       color: #fff;
+       padding: 14px 24px;
+       border-radius: 12px;
+       text-decoration: none;
+       box-shadow: 0 4px 12px rgba(46,148,185,0.3);
+       transition: transform 0.3s ease, box-shadow 0.3s ease;
+       text-align: center;
+       min-width: 220px;
+     "
+     onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 6px 16px rgba(46,148,185,0.4)'"
+     onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 12px rgba(46,148,185,0.3)'"
+  >
+    💬 Στείλτε Μήνυμα
+  </a>
 
+  <a href="https://alexandroshub.github.io/cv"
+     style="
+       display: inline-block;
+       font-size: 1.5rem;
+       font-weight: 600;
+       background: linear-gradient(135deg, #00bfa5, #2e94b9);
+       color: #fff;
+       padding: 14px 24px;
+       border-radius: 12px;
+       text-decoration: none;
+       box-shadow: 0 4px 12px rgba(0,191,165,0.3);
+       transition: transform 0.3s ease, box-shadow 0.3s ease;
+       text-align: center;
+       min-width: 220px;
+     "
+     onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 6px 16px rgba(0,191,165,0.4)'"
+     onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 12px rgba(0,191,165,0.3)'"
+  >
+    📂 Κατέβασε Βιογραφικό
+  </a>
+</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
 
           
