--- a/projects.html
+++ b/projects.html
@@ -895,24 +895,22 @@ ul.breadcrumb li a:hover {
 
 
 
-
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 <div class="footer-section">
   <div class="footer-column">
     <h6>📁 Knowledge Hub</h6>
     <ul class="footer-links">
-      <li><a href="#"><i class="far fa-lightbulb green"></i><b> Insight</b> ‘Αλγόριθμος Σκέψης’</a></li>
-      <li><a href="#"><i class="far fa-lightbulb green"></i><b> Insight</b> ‘Ενέργεια & Ροή’</a></li>
-      <li><a href="#"><i class="fas fa-terminal purple"></i><b> CodeLab</b> ‘NeuroPulse’</a></li>
-      <li><a href="#"><i class="fas fa-robot blue"></i><b> Project</b> ‘AutoMorph’</a></li>
-      <li><a href="#"><i class="fas fa-robot blue"></i><b> Project</b> ‘SkyNode’</a></li>
+ 		<li><a href="#"><i class="fas fa-book-open"style='font-size:24px;color:cyan'></i><b> Insight</b> ‘Ενέργεια & Ροή’</a></li>
+        <li><a href="#"><i class="fa fa-code" style='font-size:24px;color:purple'></i><b> CodeLab</b> ‘NeuroPulse’</a></li>
+        <li><a href="#"><i class="fa fa-cogs" style='font-size:24px;color:green'></i><b> Project</b> ‘AutoMorph’</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h6>🚀 Explore More</h6>
     <ul class="footer-links">
-      <li><a href="#"><i class="fas fa-terminal purple"></i><b> CodeLab</b> ‘QuantumForge’</a></li>
+  -
     </ul>
   </div>
 </div>
