--- a/projects.html
+++ b/projects.html
@@ -633,7 +633,7 @@ ul.breadcrumb li a:hover {
 
     <div class="alexhub-card">
       <img src="https://66.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg" alt="Robotics Project">
-      <h3>Robotic Arm Controller</h3>
+      <h3>Automated Scraping and Reporting for Quotes or Leads</h3>
       <p>Bluetooth-controlled robotic arm with Arduino and custom Android app.</p>
       <div class="alexhub-tags">
         <span>Arduino</span><span>Bluetooth</span><span>Android</span>
