--- a/connect.html
+++ b/connect.html
@@ -3,23 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 contact</title>
+  <title>𝗔𝗹𝗽𝗵𝗮𝗣𝗶 Contact</title>
   <link rel="icon" href="https://64.media.tumblr.com/9afce4a8d742ee60acbad9323d33dc5d/44cd2a580847b444-aa/s540x810/e1584500e44e11d32058f0df0cf743b29b3468f3.pnj" type="image/png">
-
-  <!-- Unicons -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
   <style>
+    /* Animated gradient background */
     body {
       margin: 0;
       font-family: 'Share Tech Mono', monospace;
-      background: linear-gradient(135deg, #0d0d0d, #1a1a1a);
-      color: #00ffcc;
+      background: linear-gradient(270deg, #0f3c4d, #1b5e20, #004d40);
+      background-size: 600% 600%;
+      animation: gradientFlow 20s ease infinite;
+      color: #cceeea;
       overflow-x: hidden;
     }
 
+    @keyframes gradientFlow {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* Header menu */
+    header {
+      background-color: rgba(0, 0, 0, 0.4);
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-family: 'Orbitron', sans-serif;
+      backdrop-filter: blur(6px);
+    }
+
+    header h1 {
+      color: #00ffcc;
+      font-size: 1.6rem;
+      margin: 0;
+    }
+
+    nav a {
+      color: #cceeea;
+      text-decoration: none;
+      margin-left: 1.5rem;
+      font-size: 0.95rem;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #00ffcc;
+    }
+
+    /* Section titles */
     .section-title {
       text-align: center;
       font-size: 2.2rem;
@@ -33,9 +69,10 @@
       text-align: center;
       font-size: 1rem;
       margin-bottom: 40px;
-      color: #ccc;
+      color: #cceeea;
     }
 
+    /* Contact layout */
     .contact-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -46,11 +83,12 @@
     }
 
     .contact-content {
-      background-color: #111;
+      background-color: rgba(0, 0, 0, 0.4);
       padding: 30px;
       border-radius: 12px;
       box-shadow: 0 0 20px rgba(0, 255, 204, 0.1);
       transition: transform 0.3s ease;
+      backdrop-filter: blur(6px);
     }
 
     .contact-content:hover {
@@ -60,7 +98,7 @@
     .contact-card {
       margin-bottom: 30px;
       padding: 20px;
-      background-color: #1a1a1a;
+      background-color: rgba(255, 255, 255, 0.05);
       border-left: 4px solid #00ffcc;
       border-radius: 8px;
     }
@@ -80,7 +118,7 @@
 
     .contact-card-data {
       font-size: 0.95rem;
-      color: #ccc;
+      color: #cceeea;
       margin-bottom: 10px;
       display: block;
     }
@@ -131,6 +169,15 @@
     }
 
     @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        margin-top: 0.5rem;
+      }
+
       .section-title {
         font-size: 1.6rem;
       }
@@ -148,7 +195,18 @@
 
 <body>
 
-  <h2 class="section-title">📬 Επικοινώνησε μαζί μου</h2>
+  <!-- Header Menu -->
+  <header>
+    <h1>AlphaPi</h1>
+    <nav> 
+      <a href="https://alexandroshub.github.io/projects.html">Projects</a>
+      <a href="https://alexandroshub.github.io/hiimalex">About.me</a>
+      <a href="https://alexandroshub.github.io">Home</a>
+    </nav>
+  </header>
+
+  <!-- Contact Section -->
+  <h2 class="section-title" id="contact">📬 Επικοινώνησε μαζί μου</h2>
   <p class="section-subtitle">Είμαι πάντα ανοιχτός για συνεργασίες, ιδέες ή απλώς μια καλή κουβέντα. Διάλεξε τον τρόπο που σου ταιριάζει!</p>
 
   <div class="contact-container container grid">
@@ -180,20 +238,19 @@
 
         <!-- Messenger -->
         <div class="contact-card">
-          <i class="uil uil-facebook-messenger contact-card-icon"></i>
+         <i class="uil uil-facebook-messenger contact-card-icon"></i>
           <h3 class="contact-card-title">Messenger</h3>
           <a href="https://m.me/papaspyrou.alexandros" target="_blank" class="contact-button">
             💬 Message Me <i class="uil uil-arrow-right contact-button-icon"></i>
           </a>
         </div>
 
-      
       </div>
     </div>
 
     <!-- Form & Socials -->
     <div class="contact-content">
-      <iframe src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAQIREL5UNjlHSFBIMUFHTVNMTTFNN1o0M1FWMFdaMi4u" height="500px" width="100%" title="forma"></iframe>
+      <iframe src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAQIREL5UNjlHSFBIMUFHTVNMTTFNN1o0M1FWMFdaMi4u" height="500px" width="100%" title="Contact Form"></iframe>
 
       <div class="footer-socials">
         <p style="margin-bottom: 10px;">📲 Follow me everywhere:</p>
@@ -203,142 +260,21 @@
         <a href="https://discord.gg/WAnYJjD" target="_blank" class="footer-social" title="Discord">
           <i class="uil uil-discord"></i>
         </a>
-        <a href="https://mastodon.social/@alphapi" target="_blank" class="footer-social" title="Mastodon">M
+        <a href="https://mastodon.social/@alphapi" target="_blank" class="footer-social" title="Mastodon">
           <i class="uil uil-mastodon"></i>
         </a>
         <a href="https://bio.link/alphapi" target="_blank" class="footer-social" title="Bio Link">
           <i class="uil uil-share-alt"></i>
         </a>
-        
+      </div>
     </div>
-      </div>   </div> 
-      <!--
-    _                                                                    
-    |_) _. ._   _.  _ ._     ._ _         /\  |  _      _. ._   _| ._ _   _ 
-    |  (_| |_) (_| _> |_) \/ | (_) |_|   /--\ | (/_ >< (_| | | (_| | (_) _> 
-          |          |   /                                                         
--->
-
-
-<!-- Google Fonts & Icons -->
-<link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
-<link href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" rel="stylesheet">
-
-<style>
-.alpha-footer {
-  font-family: Arial, sans-serif;
-  margin: 0;
-}
-
-.alpha-footer-bg {
-  background-color: #1e1e1e; /* Dark gray-black */
-  padding: 1.5rem 0; /* Shorter height */
-}
-
-.alpha-footer-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 1.6rem;
-  max-width: 1200px;
-  margin: 0 auto;
-  align-items: center;
-}
-
-.alpha-footer-title {
-  font-size: 1.4rem;
-  margin-bottom: 0.2rem;
-  font-family: 'Audiowide', sans-serif;
-  color: #ffffff;
-}
-
-.alpha-footer-subtitle {
-  font-size: 0.85rem;
-  color: #cccccc;
-}
-
-.alpha-footer-links {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.alpha-footer-links li a {
-  color: #ffffff;
-  text-decoration: none;
-  transition: color 0.3s;
-}
-
-.alpha-footer-links li a:hover {
-  color: #ff9800;
-}
-
-.alpha-footer-socials {
-  justify-self: flex-end;
-}
-
-.alpha-footer-social {
-  font-size: 1.25rem;
-  margin-right: 1rem;
-  color: #ffffff;
-  transition: color 0.3s;
-}
-
-.alpha-footer-social:hover {
-  color: #ff9800;
-}
-
-.alpha-footer-copy {
-  font-size: 0.75rem;
-  text-align: center;
-  margin-top: 1.5rem;
-  color: #cccccc;
-}
-
-.alpha-footer-copy a {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.alpha-footer-copy a:hover {
-  color: #ff9800;
-}
-
-/* Mobile + small screen adjustments */
-@media (max-width: 992px) {
-  .alpha-footer-container {
-    grid-template-columns: 1fr;
-    text-align: center;
-    row-gap: 1rem;
-  }
-  .alpha-footer-socials {
-    justify-self: center;
-  }
-}
-
-@media (max-width: 600px) {
-  .alpha-footer-title {
-    padding-left: 1rem; /* Extra left padding for logo */
-  }
-}
-</style>
-
-<footer class="alpha-footer">
-  <div class="alpha-footer-bg">
-    <div class="alpha-footer-container">
-  
-<div><h1 class="alpha-footer-title">      <a href="https://alexandroshub.github.io"style="color: white; text-decoration: none;">AlphaPi</a></h1>
-<span class="alpha-footer-subtitle">Connect. Code. Create</span></div>
-
-</div> <!-- Copy -->
-    <p class="alpha-footer-copy">
-      <a href="https://alexandroshub.github.io/welcome21.html" title="Visit AlexandrosHub">▞▚ ▛ AlexandrosHub</a> | 
-      <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | 
-      <a href="https://alexandroshub.github.io/ap.contact.html">Contact</a>
-    </p>
   </div>
-</footer>
 
-      </body></html>
+  <!-- Footer -->
+  <footer style="text-align: center; padding: 2rem 1rem; font-size: 0.85rem; color: #cceeea;">
+    <hr style="border: none; height: 1px; background: rgba(255,255,255,0.1); margin-bottom: 1rem;">
+    <p><strong>AlphaPi</strong> | Designed by Alexandros | <a href="https://alexandroshub.github.io" style="color: #00ffcc; text-decoration: none;">Visit AlexandrosHub</a></p>
+  </footer>
+
+</body>
+</html>
