--- a/plus.ap.html
+++ b/plus.ap.html
@@ -1,10 +1,11 @@
 
 
 
+
 <!--========================================================================== 
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
 
-     SpecialPage ᖰ𝘭υ⟆ Updated:25.8.25 
+     SpecialPage ᖰ𝘭υ⟆ Updated:15.9.25 
      Welcome in my personal website 100% HTML |  Hosted by Github
      Handcrafted With ❤ (CC)-By: Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs ॐ ☯ ☸
      🅐🅛🅔🅧🅐🅝🅓🅡🅞🅢 🅗🅤🅑  
@@ -423,33 +424,58 @@ function closeFullscreen() {
 <button class="accordion2">CINEMA</button>
 <div class="panel">
  <div class="container">
-<!--
-<h2><font color="#FF5733">AlexandrosHub</font><i>CINEMA</i></h2>
 
-<p><b><font color="#FF5733">Happiness</font></b> και δώρο το 
-Are You Lost In The World Like Me</p>
-<iframe src="https://www.youtube.com/embed/4yBrW0zG8y8"  width="35%" height="100%"></iframe>
-<iframe src="https://www.youtube.com/embed/e9dZQelULDk"  width="60%" height="100%"></iframe>
+<!-- CINEMA SECTION -->
+<section style="max-width: 1000px; margin: 60px auto; font-family: 'Orbitron', sans-serif; color: #e0e0e0;">
+  <h2 style="text-align:center; color:#FF5733;">AlexandrosHub <i>CINEMA</i></h2>
 
-<br>
-<p><b><font color="#FF5733">1984</font></b> Σε μια ολοκληρωτική κοινωνία που συνθλίβει την ψυχή, όπου «ο πόλεμος είναι ειρήνη», «η ελευθερία είναι αδυναμία» και «η άγνοια είναι δύναμη» </p>
+  <!-- Embedded Player -->
+  <div style="margin-bottom: 2rem;">
+    <iframe id="cinemaPlayer" width="100%" height="400" src="https://www.youtube.com/embed/4yBrW0zG8y8" frameborder="0" allowfullscreen></iframe>
+  </div>
 
-<div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x1yjeuw" width="100%" height="100%" allowfullscreen > </iframe> </div>
+  <!-- Video Buttons -->
+  <div style="display: flex; flex-direction: column; gap: 1rem;">
+    <button onclick="loadCinema('https://www.youtube.com/embed/4yBrW0zG8y8')" class="cinema-btn">🎬 Happiness</button>
+    <button onclick="loadCinema('https://www.youtube.com/embed/e9dZQelULDk')" class="cinema-btn">🎬 Are You Lost In The World Like Me</button>
+    <button onclick="loadCinema('https://www.dailymotion.com/embed/video/x1yjeuw')" class="cinema-btn">🎬 1984 – Ολοκληρωτική κοινωνία</button>
+    <button onclick="loadCinema('https://www.dailymotion.com/embed/video/x1yleur')" class="cinema-btn">🎬 1984 – Alternate Cut</button>
+    <button onclick="loadCinema('https://hdvid.tv/embed-h5spc8x60v0u.html')" class="cinema-btn">🎬 They Live – FREE WILL</button>
+    <button onclick="loadCinema('https://www.youtube.com/embed/oU-BgkgODyA')" class="cinema-btn">🎬 They Live – Subliminal Control</button>
+    <button onclick="loadCinema('https://www.youtube.com/embed/L7qU0YEEnZs')" class="cinema-btn">🎬 Alexis Grigoropoulos – 6 DEC 2008</button>
+    <button onclick="loadCinema('https://www.youtube.com/embed/di94OhOSphk')" class="cinema-btn">🎬 Νεκρός Αδερφός (2019)</button>
+  </div>
+</section>
 
-<iframe  src="https://www.dailymotion.com/embed/video/x1yjeuw" width="49%" height="100%" > </iframe>
-<iframe  src="https://www.dailymotion.com/embed/video/x1yleur" width="49%" height="100%" > </iframe>
-<br>
- 
+<!-- JavaScript -->
+<script>
+  function loadCinema(url) {
+    document.getElementById('cinemaPlayer').src = url;
+  }
+</script>
 
-<p><b><font color="#FF5733">They Live</font></b> Ο Nada διαπιστώνει πως οι άνθρωποι βομβαρδίζονται από την κυβέρνηση και τα media με υποσυνείδητα μηνύματα που τους διατάζουν να "μην αμφισβητούν την εξουσία", "να υπακούν" και άλλα τέτοια...  και δώρο το <b>FREE WILL</b></p>
-<iframe  src="https://hdvid.tv/embed-h5spc8x60v0u.html" width="49%" height="100%" > </iframe>
-<iframe  src="https://www.youtube.com/embed/oU-BgkgODyA" width="49%" height="100%" > </iframe>
+<!-- Styling -->
+<style>
+  .cinema-btn {
+    background: rgba(255, 87, 51, 0.1);
+    border: 1px solid #FF5733;
+    color: #FF5733;
+    padding: 0.8rem 1.2rem;
+    border-radius: 6px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-align: left;
+  }
+
+  .cinema-btn:hover {
+    background: rgba(255, 87, 51, 0.3);
+    transform: scale(1.02);
+  }
+</style>
 
 
-<p><b><font color="#FF5733">Alexis Grigoropoulos 6 DEC 2008</font></b> Δύο αστυνομικοί δολοφονούν εν ψυχρώ ένα νεαρό αγόρι και στη συνέχεια αποχωρούν με το περιπολικό τους και συνομιλούν επί ώρα μέσω ασυρμάτου με το κέντρο άμεσης δράσης λέγοντας ψέματα.</p>
-<iframe  src="https://www.youtube.com/embed/L7qU0YEEnZs" width="49%" height="100%" > </iframe>
-<iframe  src="https://www.youtube.com/embed/di94OhOSphk" width="49%" height="100%" > </iframe>
--->
+
 </div>
 </div>
 
@@ -461,31 +487,52 @@ Are You Lost In The World Like Me</p>
  <br>
  
  
-               <p>
-              <iframe id="YourID" name="video_feature" width="75%" height="200" src="https://www.youtube.com/embed/bmP9ZQx9a3c" frameborder="0"></iframe>
-              <!-- Other videos -->
-              <br><br>
-              <span class="w3-tag w3-small w3-light-gray">
-              <a id="video_two" href="https://www.youtube.com/embed/nZbZaZmebvU" target="video_feature"><b> LDR switch </b></a>
-              </span>
-              <span class="w3-tag w3-small w3-gray">
-              <a id="video_two" href="https://www.youtube.com/embed/yzvFTPM21bs" target="video_feature"><b> W3 University </b></a>
-              </span>
-            
-              <br />
-            </p>
- 
- 
- 
- 
- <iframe  src="https://www.youtube.com/embed/nZbZaZmebvU" width="24%" height="100%" > </iframe>
- <iframe  src="https://www.youtube.com/embed/yzvFTPM21bs" width="24%" height="100%" > </iframe>
- <iframe  src="https://www.youtube.com/embed/bmP9ZQx9a3c" width="24%" height="100%" > </iframe>
- <iframe  src="https://www.youtube.com/embed/vgc45flSp9o" width="24%" height="100%" > </iframe>
- <iframe  src="https://www.youtube.com/embed/L0xdHHDSy7U" width="24%" height="100%" > </iframe>
- <iframe  src="https://www.youtube.com/embed/2sx1h14Sl8M" width="24%" height="100%" > </iframe>   
- <iframe  src="https://www.youtube.com/embed/SeMzW2psBvA" width="24%" height="100%" > </iframe>      
+           
+ <!-- Embedded YouTube Player -->
+<div style="max-width: 800px; margin: 2rem auto; text-align: center;">
+  <iframe id="videoPlayer" width="100%" height="360" src="https://www.youtube.com/embed/bmP9ZQx9a3c" frameborder="0" allowfullscreen></iframe>
+</div>
 
+<!-- Video Selection Buttons -->
+<div style="max-width: 800px; margin: auto; display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; font-family: 'Orbitron', sans-serif;">
+  <button onclick="loadVideo('bmP9ZQx9a3c')" class="video-btn">▶ ΚΟΙΝΩΝΙΕΣ MATRIX – ΝΕΟ ΥΠΟΔΕΙΓΜΑ ΠΟΛΙΤΙΣΜΟΥ</button>
+  <button onclick="loadVideo('nZbZaZmebvU')" class="video-btn">▶ Σύμπαν και Βιοϋπολογιστές / Matrix</button>
+  <button onclick="loadVideo('yzvFTPM21bs')" class="video-btn">▶ Ανθρώπινος Βιοϋπολογιστής & Κοσμοθεωρίες</button>
+  <button onclick="loadVideo('vgc45flSp9o')" class="video-btn">▶ [Video Unavailable]</button>
+  <button onclick="loadVideo('L0xdHHDSy7U')" class="video-btn">▶ Covid19: Επικοινωνία – Βατικιώτης & Κατσορίδας</button>
+  <button onclick="loadVideo('2sx1h14Sl8M')" class="video-btn">▶ [Title not retrieved]</button>
+  <button onclick="loadVideo('SeMzW2psBvA')" class="video-btn">▶ [Title not retrieved]</button>
+</div>
+
+<!-- JavaScript to Switch Video -->
+<script>
+  function loadVideo(videoId) {
+    const player = document.getElementById('videoPlayer');
+    player.src = `https://www.youtube.com/embed/${videoId}`;
+  }
+</script>
+
+<!-- Optional Styling -->
+<style>
+  .video-btn {
+    background: linear-gradient(135deg, #0a1f3d, #3b0f1f);
+    color: #e0e0e0;
+    border: none;
+    padding: 0.6rem 1rem;
+    border-radius: 6px;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease;
+  }
+
+  .video-btn:hover {
+    background: linear-gradient(135deg, #3b0f1f, #000000);
+    transform: scale(1.05);
+  }
+</style>
+
+ 
+ 
 
 </div>
     <!-- End Grid/Pricing tables -->
