--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@ function topFunction() {
       <li><a href="https://alexandroshub.github.io/robotics.html">Ρομποτική</a></li>
       <li><a href="https://alexandroshub.github.io/iot">Internet of Things (IoT)</a></li>
       <li><a href="https://alexandroshub.github.io/arduino">Arduino</a> & <a href="https://alexandroshub.github.io/raspberrypi">Raspberry Pi</a></li>
-      <li><a href="https://alexandroshub.github.io/codingzone">Προγραμματισμό</a> & <a href="https://alexandroshub.github.io/stem">STEM</a></li>
+      <li><a href="https://alexandroshub.github.io/development.html">Προγραμματισμό</a> & <a href="https://alexandroshub.github.io/stem">STEM</a></li>
       <li><a href="https://alexandroshub.github.io/plus.ap.html">+ Plus: Tutorials, οδηγοί & εκπαιδευτικό περιεχόμενο</a></li>
     </ul>
   </div>
