--- a/projects.html
+++ b/projects.html
@@ -789,14 +789,15 @@ This philosophy extends beyond technology into problem-solving itself: understan
       <a href="https://github.com/alexandroshub/python/blob/master/promodoro.py" target="_blank">🔗 View on GitHub</a>
     </div>
 
-    <div class="alexhub-card">
-      <img src="https://66.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg" alt="Robotics Project">
-      <h3>soon . . .</h3>
-      <p>xx.</p>
+   <div class="alexhub-card">
+      <img src="https://64.media.tumblr.com/eb43b2b7e00465f624d87df1ec43ee8a/8cd5c9ea99ef21ba-31/s1280x1920/ddabb0376a449b9f0359222e53c5594afb8919bd.pnj" alt="Robotics Project">
+      <h3>AutoSortify</h3>
+      <p>Smart Automation for a Cleaner Workspace</p>
       <div class="alexhub-tags">
-        <span>xx</span><span>xx</span><span>xx</span>
+        <span>Python</span>
       </div>
-      <a href="xx" target="_blank">🔗xx</a>
+<a href="https://github.com/alexandroshub/python/blob/ea3518d7169ca7499139805ed0542fd5ea6bd2d7/AutoSortify.py" target="_blank">🔗View on GitHub</a>  
+<a href="https://github.com/alexandroshub/python/blob/ea3518d7169ca7499139805ed0542fd5ea6bd2d7/AutoSortify_readme.txt" target="_blank">🔗Read me</a>
     </div>
 
     <!-- Add more project cards here -->
